@@ -54,6 +54,7 @@ public class PaymentAuthorisationSpiImplTest {
     private static final byte[] CONSENT_DATA_BYTES = "consent_data".getBytes();
     private static final String PAYMENT_ID = "c966f143-f6a2-41db-9036-8abaeeef3af7";
     private static final String SECRET = "12345";
+    private static final SpiPsuAuthorisationResponse SPI_PSU_AUTHORISATION_FAILURE_RESPONSE = new SpiPsuAuthorisationResponse(false, SpiAuthorisationStatus.FAILURE);
 
     @InjectMocks
     private PaymentAuthorisationSpiImpl authorisationSpi;
@@ -228,7 +229,7 @@ public class PaymentAuthorisationSpiImplTest {
     }
 
     @Test
-    public void authorisePsu_failure() {
+    public void authorisePsu_failureResponse() {
         when(spiAspspConsentDataProvider.loadAspspConsentData()).thenReturn(CONSENT_DATA_BYTES);
         SCAPaymentResponseTO scaPaymentResponseTO = getScaPaymentResponseTO(ScaStatusTO.PSUIDENTIFIED);
         scaPaymentResponseTO.setScaMethods(Collections.emptyList());
@@ -241,8 +242,8 @@ public class PaymentAuthorisationSpiImplTest {
         SpiResponse<SpiPsuAuthorisationResponse> actual = authorisationSpi.authorisePsu(SPI_CONTEXT_DATA, PSU_ID_DATA, SECRET,
                                                                                         businessObject, spiAspspConsentDataProvider);
 
-        assertTrue(actual.hasError());
-        assertEquals(MessageErrorCode.PSU_CREDENTIALS_INVALID, actual.getErrors().get(0).getErrorCode());
+        assertFalse(actual.hasError());
+        assertEquals(actual.getPayload(), SPI_PSU_AUTHORISATION_FAILURE_RESPONSE);
 
         verify(spiAspspConsentDataProvider, times(1)).loadAspspConsentData();
         verify(consentDataService, times(1)).response(CONSENT_DATA_BYTES, SCAPaymentResponseTO.class, false);
